# neptis-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh  dev.db  dist-workspace.toml  openapi.json  rust-toolchain.toml  update.bat  v1-final.json
.github/workflows/: build-setup.yml  release.yml
.sqlx/: query-0747f86b417f7197f1aed15d42df8f7c498c3781cbbf320dfba3786519e6c89d.json  query-15173de0422b1aabdeaad7d6c7a9e18e447bd349d907c4e6a9442cfd60b183d0.json  query-1e7b5166c2e651bdf905ac49bcd1cd9305c7aa439e683dff4859087a2c60707d.json  query-2ad92582ebfff5aeaf2fe649d10d7596adc1bdea6617109e7be9b13674965bf4.json  query-4c19571d50077f339fcf6795df5337a3403c4f048e8b1f117ef0fd23054a9b9a.json  query-598ed332850e585580532fa5cd3b3b0bb615e6f491b8639234fbe51826eb66cb.json  query-5f6516ba4fea8fa98f605b4a51efae79100a56a614b667ee8864ef4ec2847166.json  query-6e8c3b3bc1d1080b5ec50dffc67cf43f8d6040809611e95e808d21342630421f.json  query-71b2150d04171fca909bd3a2399a984a237bfb6fc29b06c879b6aecb696e8ee3.json  query-74600019be3edee4fab450d8abab8e131197ab80055fefeb08a45e594c554733.json  query-830e796c0ec0af04f8b2a10dea20eade629fd509e8b30dc167ce0cd32d069eec.json  query-832c17b6bf9ed75473646caf40583bc0bbe66c921f327f3e95db785d005625d3.json  query-94284014606fedf05284161889eab4466382525b4f3658db221bdf773fe94f08.json  query-b4d031a4a4a5b7d3226b62753b4d1e4febf539acdf962c46adfb224bf42529fa.json  query-c18319bc259035164678b5c235516e2b1f19c1303b2cd6e3454740eaef950860.json  query-d368b4694f9778884d3a2a943452c4221ace4f6434f3c6be958a8866c0dfbaad.json  query-e04c3ab2507d01df49bbc4a527181544425b22a0e2c26b3a5853b7557bee749a.json  query-e0c812eca3adc8bda4bd20a0a3b8c0986fff2951f3c45971bf2ef00bc083bd56.json  query-e78c1ce2a90ee0f88273e5133aaffc06be294926d619055b933c0c4b2e7224d3.json  query-e88bf83b596521c7b50d0a0fbce92ce07ef0ca1c2c024ab9e4ad9309c1bcf7c5.json  query-f4036f277ba3a7735b2ba67c089f9bc2f2b2346ead0e2a0ce8a0909a57988c6a.json  query-f4a0173d3551e83641b4f27348876921f98c5770202a4ca8c74cbe84f76ef841.json  query-fc3dcd7115a5cff75878d811d2a39183d447d1204b68594fd85f55d53f3c6657.json  query-fd818f0071f93dea3708ea7cce713352f3552aa1f4456593ee61dd811f39a28d.json
migrations/: 0001_create_all.sql  0002_rclone.sql  0003_rclone2.sql  0004_rclone3.sql  0005_rclone4.sql  0006_rclone5.sql  0007_rclone6.sql  001_create_all.sql
neptis-auto/: Cargo.toml
neptis-gui/: Cargo.toml
neptis-gui/src/: main.rs
neptis-gui/src/ui/: browser.rs  manager.rs
neptis-gui/wix/: main.wxs
neptis-lib/: Cargo.toml
neptis-lib/migrations/: 001_create_all.sql
neptis-lib/src/: filesystem.rs  lib.rs  traits.rs
neptis-lib/src/apis/: api.rs  dtos.rs  mod.rs
neptis-lib/src/db/: controller.rs  prelude.rs  server.rs  transfer.rs
neptis-lib/src/models/: auth_output_dto.rs  cpu_item_dto.rs  dynamic_config_dto.rs  file_output_dto.rs  global_config_put_dto.rs  job_backup_dto.rs  job_restore_dto.rs  message_item_dto.rs  message_post_dto.rs  message_read_item.rs  mod.rs  snapshot_result_dto.rs
neptis-lib/src/rclone/: mod.rs  prelude.rs  rclone_client.rs  rclone_stats.rs
neptis-rclone/: .env  Cargo.toml  dev.db  diesel.toml
neptis-rclone/src/: dtos.rs  errors.rs  handlers.rs  macros.rs  main.rs  models.rs  rclone.rs  schema.rs  uuid.rs
neptis-rclone/src/api/: dtos.rs  handlers.rs  mod.rs
neptis-rclone/wix/: main.wxs
src/: V1.txt  api_client.rs  arduino_secret.rs  error.rs  filesystem.rs  lib.rs  macros.rs  main.rs  rolling_secret.rs
src/apis/: api.rs  auth_api.rs  auto_job_api.rs  config_api.rs  configuration.rs  data_api.rs  dtos.rs  info_api.rs  job_api.rs  log_api.rs  message_api.rs  mod.rs  notification_api.rs  prelude.rs  repo_api.rs  user_api.rs
src/db/: controller.rs  mod.rs  server.rs  sync_models.rs  transfer.rs
src/ipc/: handlers.rs  mod.rs  msg_receiver.rs  rclone.rs
src/models/: auth_input_dto.rs  auth_output_dto.rs  auto_job_config_dto.rs  auto_job_get_dto.rs  auto_job_put_dto.rs  base_point_identify_dto.rs  cpu_item_dto.rs  data_point_browse_get_dto.rs  data_point_dto.rs  data_point_share_dto.rs  dynamic_config_dto.rs  error.rs  error_type.rs  file_dto.rs  file_output_dto.rs  file_put_dto.rs  global_config_put_dto.rs  job_backup_dto.rs  job_error_dto.rs  job_restore_dto.rs  log_item_dto.rs  message_item_dto.rs  message_post_dto.rs  message_read_item.rs  mod.rs  repo_data_job_dto.rs  repo_data_job_status_dto.rs  repo_data_job_summary_dto.rs  repo_point_dto.rs  repo_point_share_dto.rs  snapshot_dto.rs  snapshot_result_dto.rs  system_status_dto.rs  user_create_dto.rs  user_permission.rs  user_permission_dto.rs  user_put_dto.rs  user_summary_dto.rs  ws_config_item_dto.rs  ws_config_put_dto.rs  (+1 more)
src/ui/: browser.rs  file_browser.rs  file_size.rs  manager.rs  mod.rs  server.rs
wix/: main.wxs
