[workspace]
members = ["neptis-rclone", "neptis-gui"]
resolver = "3"

[package]
name = "neptis-lib"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/ericg2/neptis-rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.12"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
] }
uuid = { version = "1", features = ["v4", "serde"] }
hmac = "0.12.1"
sha2 = "0.10.8"
rand = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
aes = "0.8.4"
cbc = { version = "0.1.2", features = ["alloc"] }
totp-rs = { version = "5.7", features = ["gen_secret", "serde_support"] }
chrono = { version = "0.4", features = ["serde"] }
cron-descriptor = "0.1.1"
totp-lite = "2.0.1"
libc = "*"
dirs-next = "2"
moka = { version = "0.12.10", features = ["sync"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros", "migrate", "uuid", "chrono", "json"] }
reqwest-retry = "0.7"
reqwest-middleware = "0.4"
zip = "4"
base64 = "0.22.1"
url = "2.5"

[target.'cfg(unix)'.dependencies]
fuse_mt = "0.6"
fuser = "=0.13"


# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"