[package]
name = "neptis-gui"
version = "1.2.0"
edition = "2024"

[dependencies]
neptis-lib = { path = ".." }
serde = { version = "1", features = ["derive"] }
serde_repr = "0.1"
serde_json = "1.0"
url = "2.5"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
] }
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
inquire = { version = "0.7", features = ["date", "editor"] }
clearscreen = "4.0.1"
cron = "0.15.0"
cron-descriptor = "0.1.1"
crossterm = "0.29"
regex = "1"
dirs-next = "2"
itertools = "0.14"
indexmap = "2"
axoupdater = { version = "0.9", features = ["blocking"] }
clap = { version = "4.5", features = ["derive", "env"] }

[target.'cfg(unix)'.dependencies]
fuse_mt = "0.6"
fuser = "=0.13"