[package]
name = "neptis-rclone"
version = "0.1.0"
edition = "2024"

[dependencies]
neptis-lib = { path = ".." }
base64 = "0.22.1"
chrono = { version = "0.4.41", features = ["serde"] }
reqwest = "0.12.20"
tokio = "1.45.1"
uuid = { version = "1.17.0", features = ["v4"] }
zip = "4.1.0"
serde_json = "1.0.140"
duct = "1"
dirs-next = "2"
serde = { version = "1.0.219", features = ["derive"] }
http = "1.3.1"
thiserror = "2.0.12"
diesel = { version = "2.2.10", features = ["sqlite", "chrono", "uuid"]}
rocket = { version = "0.5", features = ["uuid", "json"] }
url = "2"