[package]
name = "neptis-rclone"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/ericg2/neptis-rs"
authors = ["Eric E. Gold"]
description = "A local background service to run sync jobs."

[package.metadata.wix]
upgrade-guid = "1D5DC010-1FE7-4B75-8189-51AFB44FDE97"
path-guid = "7801CD89-C559-4E60-8C98-454B449FE41A"
license = false
eula = false

[dependencies]
neptis-lib = { path = ".." }
base64 = "0.22.1"
chrono = { version = "0.4.41", features = ["serde"] }
reqwest = "0.12.20"
tokio = "1.45.1"
uuid = { version = "1.17.0", features = ["v4"] }
zip = "4.1.0"
serde_json = "1.0.140"
duct = "1"
dirs-next = "2"
serde = { version = "1.0.219", features = ["derive"] }
http = "1.3.1"
thiserror = "2.0.12"
rocket = { version = "0.5", features = ["uuid", "json"] }
cron = { version = "0.15.0", features = ["serde"] }
url = "2"
sqlx = "0.8.5"
